Stuttering in Firefox 139.0a1 (2025-04-16) (64-bit) when watching videos
Categories
(Core :: Graphics, defect)
Tracking
()
Tracking | Status | |
---|---|---|
firefox-esr115 | --- | unaffected |
firefox-esr128 | --- | unaffected |
firefox137 | --- | unaffected |
firefox138 | --- | unaffected |
firefox139 | + | fixed |
People
(Reporter: teleter, Assigned: sotaro)
References
(Regression)
Details
(Keywords: regression)
Attachments
(5 files)
My firefox nightly 139.0a1 (2025-04-16) (64-bit) on Windows 11 24H2 is stuttering when watching videos on youtube, linkedin etc
Reporter | ||
Comment 1•29 days ago
|
||
Comment 2•29 days ago
|
||
I'm seeing the same effect and MozRegression points me to Bug 1959856
Comment 3•29 days ago
|
||
Per comment2, Sotaro, could you take a look on this? Thanks!
Comment 4•29 days ago
|
||
Set release status flags based on info from the regressing bug 1959856
Updated•29 days ago
|
Updated•29 days ago
|
Assignee | ||
Updated•29 days ago
|
Assignee | ||
Comment 5•29 days ago
|
||
Hi :Tarek, can you attach about:support to this bug?
Assignee | ||
Comment 6•29 days ago
•
|
||
With pref media.wmf.zero-copy-nv12-textures = false, I could easier to reproduce the problem with the following STR with Win11 PC with NVIDIA GPU. I could not reproduce the problem with Win PCs with Intel GPU.
Comment hidden (obsolete) |
Comment hidden (obsolete) |
Reporter | ||
Comment 9•29 days ago
|
||
Reporter | ||
Comment 10•29 days ago
|
||
Assignee | ||
Comment 11•29 days ago
|
||
(In reply to Sotaro Ikeda [:sotaro] from comment #6)
With pref media.wmf.zero-copy-nv12-textures = false, I could easier to reproduce the problem with the following STR with Win11 PC with NVIDIA GPU. I could not reproduce the problem with Win PCs with Intel GPU.
It seemed that recent change to WebRender seemed to block to use video overlay. can_promote_to_surface() was failed.
Comment 12•29 days ago
|
||
I am seeing the same visual problem with integrated Intel graphics. about:support attached.
Comment 14•28 days ago
|
||
FWIW, I'm only able to repro this bug when using gfx.webrender.software
pref = true (SW-WR).``
Comment 15•28 days ago
|
||
I'm seeing stuttering on AV1, H264, H265, but not having issues on VP8, VP9. Seeing in both video playback and WebRTC scenarios. On Intel 12th Gen integrated graphics. Can we consider a backout of the offending patch?
Assignee | ||
Comment 17•28 days ago
|
||
OK, I am going to create a patch to disable it.
Assignee | ||
Comment 18•28 days ago
|
||
On intel gen12, blocking nsIGfxInfo::FEATURE_REUSE_DECODER_DEVICE seemed to affect to the problem.
Assignee | ||
Comment 19•28 days ago
|
||
Comment 20•28 days ago
|
||
Comment 22•27 days ago
|
||
Confirming that the current Windows Shippable builds on autoland that include this patch resolve my Intel 12th Gen issues. Thanks!
Comment 23•27 days ago
|
||
bugherder |
Updated•16 days ago
|
Reporter | ||
Comment 26•14 days ago
|
||
(In reply to Sotaro Ikeda [:sotaro] from comment #5)
Hi :Tarek, can you attach about:support to this bug?
Replying to disable needinfo alerts
Assignee | ||
Comment 27•8 days ago
|
||
I found the problem of fence handling in the following functions during Bug 1964219.
- D3D11TextureData::Unlock()
- D3D11TextureData::IncrementAndSignalWriteFence()
Description
•