Bug 1960950 - Disable FenceD3D11 handling to hardware decoded video r=gfx-reviewers,lsalzman

Disable the fence usage to address regression.

Differential Revision: https://phabricator.services.mozilla.com/D246010